# rust-analyzer

./: .gitignore  Cargo.toml  Makefile
crates/base-db/src/: change.rs
crates/hir-def/src/: db.rs  lib.rs
crates/hir-ty/src/: tests.rs
crates/hir/src/: semantics.rs
crates/ide/: Cargo.toml
crates/ide/src/: klebs_fix_baby_rust.rs  klebs_plugin_interface.rs  lib.rs
crates/rust-analyzer/: Cargo.toml
crates/rust-analyzer/src/: config.rs  dispatch.rs  handlers.rs  lsp_ext.rs  main_loop.rs
crates/syntax/src/: syntax_node.rs
editors/code/: package.json
editors/code/src/: lsp_ext.ts
